--- a/PageObjectExtended/test-output/index.html
+++ b/PageObjectExtended/test-output/index.html
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-skipped">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Suite">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,31 +91,31 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">3 methods,  3 skipped,  </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods skipped suite-Suite"> (hide)</a> <!-- hide-methods skipped suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods skipped suite-Suite"> (show)</a> <!-- show-methods skipped suite-Suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content skipped suite-Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.TestCase2" hash-for-method="doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)">doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})">loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.TestCase1" hash-for-method="doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)">doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})">loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.TestCase1" hash-for-method="doLogin(ramesh@gmail.com, 123sele, firefox)">doLogin(ramesh@gmail.com, 123sele, firefox)</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})">loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                    </div> <!-- method-list-content skipped suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -127,46 +127,71 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.pol.zoho.testcases.TestCase2</span>
+              <img src="skipped.png"/>
+              <span class="class-name">com.pol.zoho.testcases.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)">
-                  </a> <!-- doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome) -->
-                  <span class="method-name">doLogin</span>
-                  <span class="parameters">(seleniumtesterbangalore@gmail.com, 123selenium, chrome)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.pol.zoho.testcases.TestCase1</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)">
-                  </a> <!-- doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome) -->
-                  <span class="method-name">doLogin</span>
-                  <span class="parameters">(seleniumtesterbangalore@gmail.com, 123selenium, chrome)</span>
+                  <a name="loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})">
+                  </a> <!-- loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com}) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</span>
+                  <div class="stack-trace">org.testng.SkipException: Skipping the test : LoginTest as the Runmode of Test Suite : master is NO
+	at com.pol.zoho.utilities.DataUtil.checkExecution(DataUtil.java)
+	at com.pol.zoho.testcases.LoginTest.loginTest(LoginTest.java)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:745)
+... Removed 9 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="doLogin(ramesh@gmail.com, 123sele, firefox)">
-                  </a> <!-- doLogin(ramesh@gmail.com, 123sele, firefox) -->
-                  <span class="method-name">doLogin</span>
-                  <span class="parameters">(ramesh@gmail.com, 123sele, firefox)</span>
+                  <a name="loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})">
+                  </a> <!-- loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com}) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</span>
+                  <div class="stack-trace">org.testng.SkipException: Skipping the test : LoginTest as the Runmode of Test Suite : master is NO
+	at com.pol.zoho.utilities.DataUtil.checkExecution(DataUtil.java)
+	at com.pol.zoho.testcases.LoginTest.loginTest(LoginTest.java)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:745)
+... Removed 9 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})">
+                  </a> <!-- loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com}) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})</span>
+                  <div class="stack-trace">org.testng.SkipException: Skipping the test : LoginTest as the Runmode of Test Suite : master is NO
+	at com.pol.zoho.utilities.DataUtil.checkExecution(DataUtil.java)
+	at com.pol.zoho.testcases.LoginTest.loginTest(LoginTest.java)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:745)
+... Removed 9 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
+          </div> <!-- suite-Suite-class-skipped -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -179,14 +204,9 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; parallel=&quot;tests&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test1&quot; parallel=&quot;tests&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.pol.zoho.testcases.TestCase1&quot;/&gt;
+      &lt;class name=&quot;com.pol.zoho.testcases.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test1 --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test2&quot; parallel=&quot;tests&quot;&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.pol.zoho.testcases.TestCase2&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test2 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -199,9 +219,6 @@
             <ul>
               <li>
                 <span class="test-name">Test1 (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Test2 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -229,22 +246,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'doLogin')
-data.setCell(0, 2, 'com.pol.zoho.testcases.TestCase1')
-data.setCell(0, 3, 38819);
+data.setCell(0, 1, 'loginTest')
+data.setCell(0, 2, 'com.pol.zoho.testcases.LoginTest')
+data.setCell(0, 3, 156);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'doLogin')
-data.setCell(1, 2, 'com.pol.zoho.testcases.TestCase2')
-data.setCell(1, 3, 27395);
+data.setCell(1, 1, 'loginTest')
+data.setCell(1, 2, 'com.pol.zoho.testcases.LoginTest')
+data.setCell(1, 3, 140);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doLogin')
-data.setCell(2, 2, 'com.pol.zoho.testcases.TestCase1')
-data.setCell(2, 3, 26615);
+data.setCell(2, 1, 'loginTest')
+data.setCell(2, 2, 'com.pol.zoho.testcases.LoginTest')
+data.setCell(2, 3, 125);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 421 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -270,20 +287,17 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.pol.zoho.testcases.TestCase1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.pol.zoho.testcases.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)</span>
+                <span class="method-name">loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">doLogin(ramesh@gmail.com, 123sele, firefox)</span>
+                <span class="method-name">loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.pol.zoho.testcases.TestCase2</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">doLogin(seleniumtesterbangalore@gmail.com, 123selenium, chrome)</span>
+                <span class="method-name">loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
