--- a/PageObjectExtended/test-output/old/Suite/methods.html
+++ b/PageObjectExtended/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a3707a">  <td>19/01/12 14:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.pol.zoho.testcases.TestCase1@1d371b2d]">doLogin</td> 
-  <td>TestNG-PoolService-1@1552087429</td>   <td></td> </tr>
-<tr bgcolor="a3707a">  <td>19/01/12 14:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.pol.zoho.testcases.TestCase1@1d371b2d]">doLogin</td> 
-  <td>TestNG-PoolService-1@1552087429</td>   <td></td> </tr>
-<tr bgcolor="a095a0">  <td>19/01/12 14:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.doLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.pol.zoho.testcases.TestCase2@67b467e9]">doLogin</td> 
-  <td>TestNG-PoolService-0@468591444</td>   <td></td> </tr>
+<tr bgcolor="a3707a">  <td>19/01/13 10:43:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@4e718207]">loginTest</td> 
+  <td>TestNG-PoolService-2@662914728</td>   <td></td> </tr>
+<tr bgcolor="a3707a">  <td>19/01/13 10:43:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@4e718207]">loginTest</td> 
+  <td>TestNG-PoolService-2@662914728</td>   <td></td> </tr>
+<tr bgcolor="a3707a">  <td>19/01/13 10:43:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@4e718207]">loginTest</td> 
+  <td>TestNG-PoolService-2@662914728</td>   <td></td> </tr>
 </table>
